[package]
name = "happynum"
version = "1.7.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A package for determining happy numbers"
readme = "README.md"
repository = "https://github.com/jjmark15/happynum_rust"
keywords = ["happy","number"]
categories = ["science"]
exclude = [".gitignore"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
itertools = "0.10"
rayon = { version = "1.3", optional = true }

[features]
parallel=["rayon"]
default=["parallel"]