[package]
name = "happynum"
version = "1.7.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Distinct happy number finder"
readme = "README.md"
repository = "https://github.com/jjmark15/happynum_rust"
keywords = ["happy", "number"]
categories = ["science"]
exclude = [".gitignore"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10"
rayon = { version = "1.3" }